Fixed dark mode button text again

--- a/C3-Project/EJS/views/CSS/main.css
+++ b/C3-Project/EJS/views/CSS/main.css
@@ -199,7 +199,7 @@ footer{
 
 /* Main page background */
 .darkMode{
-    color: #fff;
+    color: #fff !important;
 }
 
 .dark-mode{
